`kernel`,`std`: support increasing size of userspace heaps
- Add a `resize_memory_object` with dubious safety checks
- Expose this syscall via userspace `poplar` library
- Rework `std` heap support to make it closer to real-`std`
- This fixes current versions of `ginkgo`'s GC which makes raw allocations

--- a/lib/std/Cargo.toml
+++ b/lib/std/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 poplar = { path = "../poplar" }
 linked_list_allocator = "0.10.5"
+spinning_top = "0.3.0"
 
 [features]
 ddk = ["poplar/ddk"]
