--- a/lib/picotoml/Cargo.toml
+++ b/lib/picotoml/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 [dependencies]
 logos = { version = "0.13.0", default-features = false, features = ["export_derive"] }
 serde = { version = "1.0.188", default-features = false }
-arrayvec = "0.7.6"
+heapless = "0.8.0"
 
 [features]
 default = []
