--- a/lib/hal_x86_64/Cargo.toml
+++ b/lib/hal_x86_64/Cargo.toml
@@ -11,6 +11,7 @@ bit_field = "0.10"
 spinning_top = "0.3.0"
 mulch = { path = "../mulch" }
 tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
+mycelium-bitfield = "0.1.4"
 
 [features]
 default_features = []
