--- a/tools/xtask/Cargo.toml
+++ b/tools/xtask/Cargo.toml
@@ -16,5 +16,5 @@ serde = { version = "1.0.152", features = ["derive"] }
 toml = "0.7.2"
 colored = "2.0.4"
 serialport = "4.2.2"
-seed = { path = "../../seed/" }
+seed_config = { path = "../../seed/seed_config" }
 fs_extra = "1.3.0"
