--- a/kernel/kernel_riscv/Cargo.toml
+++ b/kernel/kernel_riscv/Cargo.toml
@@ -23,5 +23,5 @@ maitake = { git = "https://github.com/hawkw/mycelium", features = [
 ] }
 
 [features]
-platform_rv64_virt = ["hal_riscv/platform_rv64_virt"]
-platform_mq_pro = ["hal_riscv/platform_mq_pro"]
+platform_rv64_virt = []
+platform_mq_pro = []
