--- a/tools/xtask/Cargo.toml
+++ b/tools/xtask/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 xflags = "0.3.1"
 xshell = "0.1.14"
 eyre = "0.6.5"
-color-eyre = "0.5.11"
+color-eyre = { version = "0.6.5", default-features = false }
 gpt = "3.1.0"
 fatfs = "0.3.5"
 fscommon = "0.1.1"
