`ginkgo`: start plumbing for real diagnostic reporting
We were originally going to use `miette`, but it relies on having more of a
real `std` than we can currently provide (and we'd have to vendor it). This
starts the required plumbing in the lexer/parser to support diagnostics.

--- a/ginkgo/Cargo.toml
+++ b/ginkgo/Cargo.toml
@@ -19,6 +19,7 @@ required-features = ["rustyline"]
 std = { path = "../lib/std", optional = true }
 rustyline = { version = "14.0.0", features = ["derive"], optional = true }
 unicode-xid = "0.2.6"
+thiserror = { version = "2.0.16", default-features = false }
 
 [features]
 default = ["rustyline"]
